RESOLVED FIXED75806
[chromium] iframes in an autoresized window get sized incorrectly.
https://bugs.webkit.org/show_bug.cgi?id=75806
Summary [chromium] iframes in an autoresized window get sized incorrectly.
David Levin
Reported 2012-01-08 12:51:09 PST
See summary.
Attachments
Patch (6.70 KB, patch)
2012-01-08 13:13 PST, David Levin
no flags
David Levin
Comment 1 2012-01-08 13:13:21 PST
WebKit Review Bot
Comment 2 2012-01-08 16:30:02 PST
Comment on attachment 121587 [details] Patch Clearing flags on attachment: 121587 Committed r104419: <http://trac.webkit.org/changeset/104419>
WebKit Review Bot
Comment 3 2012-01-08 16:30:06 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.