[chromium] iframes in an autoresized window get sized incorrectly. https://bugs.webkit.org/show_bug.cgi?id=75806

Reviewed by Adam Barth.

Source/WebKit/chromium:

TEST: fast/autoresize/autoresize-with-iframe.html

* src/WebFrameImpl.cpp:
(WebKit::WebFrameImpl::createFrameView): Only do autoresizing
for the main frame not child frames.

LayoutTests:

* fast/autoresize/autoresize-with-iframe-expected.txt: Added.
* fast/autoresize/autoresize-with-iframe.html: Added.
* fast/autoresize/basic.html: Pulled out autoresize-util.js
* fast/autoresize/resources/autoresize-util.js: Added.
(log):
(shouldBe):
* fast/autoresize/resources/iframe.html: Added.


Canonical link: https://commits.webkit.org/92621@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104419 268f45cc-cd09-0410-ab3c-d52691b4dbfc